--- a/.gitignore
+++ b/.gitignore
@@ -29,6 +29,9 @@ coverage
 # node-waf configuration
 .lock-wscript
 
+# Visual Studio
+.vs/
+
 # Compiled binary addons (https://nodejs.org/api/addons.html)
 build/Release
 
